<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Registration acceptance</string>
    <string name="action_settings">Settings</string>
    
    <!-- MainFragment -->
    <string name="text_empty">Waiting for an ID&#8230;</string>
    <string name="text_currentID">ID:</string>
    <string name="text_name">Name:</string>
    <string name="text_lastname">Last Name:</string>
    <string name="text_tshirt">Tshirt:</string>
    <string name="text_email">Email:</string>
    <string name="text_morning">Morning:</string>
    <string name="text_afternoon">Afternoon:</string>
    <string name="text_check_in">Check in:</string>
    <string name="text_comments">Comments:</string>
    
    <string name="button_qrcode">Scan QR Code</string>
    <string name="button_id">Find ID</string>
    <string name="button_accept">Record</string>
    <string name="button_remove">Remove</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_assistance_def">No assistance recorded</string>
    <string name="button_assistance">Show assistance details</string>
    
    <!-- FragmentAssistances -->
    <string name="text_accepted">Accepted</string>
    <string name="text_refused">Refused</string>
    <string name="text_pctype">PC Type:</string>
    <string name="text_brand">Brand:</string>
    <string name="text_model">Model:</string>
    <string name="text_cpu">CPU:</string>
    <string name="text_ram">RAM:</string>
    <string name="text_problem">Problem:</string>
    <string name="text_acceptance">Acceptance:</string>
    <string name="text_accepted_time">Accepted time:</string>
    <string name="text_mttr">MTTR:</string>
    <string name="text_operator">Operator:</string>
    <string name="text_desktop">Desktop</string>
    <string name="text_laptop">Laptop</string>
    <string name="text_chromebook">Chromebook</string>
    <string name="text_transformer">Transformer</string>
    <string name="text_pc_other">Other</string>
    
    <string name="button_take">Take</string>
    
    <!-- Toasts -->
    <string name="error_qr_content">Invalid content of the QR Code</string>
    <string name="error_connection">Cannot contact the server</string>
    <string name="error_internal_error">Internal error, blame the developer!</string>
    <string name="error_server_code">Server error</string>
    <string name="error_invalid_response">Invalid response from server</string>
    <string name="error_empty_field">Empty field</string>
    <string name="error_invalid_field">Invalid field</string>
    <string name="error_no_id_selected">Select an ID first</string>
    <string name="error_already_checked_in">User already checked in</string>
    <string name="error_already_checked_out">User already not checked in</string>
    <string name="error_market">Cannot open Play Store and get QR Code scanner app</string>
    <string name="error_already_taken">This assistance is already taken</string>
    
    <!-- Preferences -->
    <string name="pref_server_url">Server REST URL</string>
    <string name="pref_username">User</string>
    <string name="pref_password">Password</string>

</resources>
